--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,6 @@
   "C_Cpp_Runner.debuggerPath": "gdb",
   "C_Cpp_Runner.useMsvc": false,
   "C_Cpp_Runner.useAddressSanitizer": false,
-  "C_Cpp_Runner.showCompilationTime": false
+  "C_Cpp_Runner.showCompilationTime": false,
+  "C_Cpp.errorSquiggles": "enabled"
 }
