--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,8 @@
     "/w14928"
   ],
   "C_Cpp_Runner.useUndefinedSanitizer": false,
-  "C_Cpp_Runner.useLeakSanitizer": false
+  "C_Cpp_Runner.useLeakSanitizer": false,
+  "files.associations": {
+    "stdio.h": "c"
+  }
 }
